src/style.css
* {
  font-family: inherit;
  line-height: inherit;
  color: inherit;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-family: 'Avenir', Arial, sans-serif;
  font-size: 125%;
  height: 100%;
}

:focus {
  outline: none;
}

@media (max-width: 50em) {
  html {
    font-size: 100%;
  }
}

body {
  padding: 0;
  height: 100%;
}

/* wrapper */
body > div {
  height: 100%;
  max-width: 796px;
  position: relative;
}

@media screen and (min-width: 796px) {
  body {
    background-image: linear-gradient(-90deg, #e52d27, #b31217);
  }

  body > div {
    height: 80vh;
    position: relative;
    top: 10vh;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    margin: 0 auto;
    overflow: hidden;
  }
}

header {
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
  top: 0;
  width: 100%;
  background-color: white;
  z-index: 5;
  padding: 1em 2em;
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 80px;
}

header img {
  height: 1.5rem;
}

.chat-wrapper {
  position: relative;
  background-image: url('/img/bg.png');
  width: 100%;
  height: calc(100% - 80px - 70px);
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.chat-wrapper ul {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  list-style: none;
  padding: 0.5em;
}

li {
  padding: 1em;
  background-color: white;
  margin: 1em 0;
  max-width: 67%;
  box-shadow: 0 1px 0.5px rgba(0, 0, 0, 0.13);
  border-radius: 6px;
}

li:first-child {
  margin-top: auto;
}

[data-user=user] {
  align-self: flex-end;
  background-color: #dcf8c6;
}

li ul {
  list-style: none;
  padding: 0;
  padding-top: 0.5em;
}

li button {
  margin-top: 1rem;
  flex-grow: 1;
  border: 1px solid #efefef;
  border-radius: 4px;
  padding: 0.5em;
  background-color: white;
  font-size: inherit;
  color: #60b0e8;
  width: 100%;
}

li ul li {
  display: flex;
  max-width: 100%;
  padding: 0.5em;
  border: 1px solid #efefef;
}

li div {
  width: 70%;
  align-self: center;
  padding: 0.5em;
}

li div h2 {
  font-size: inherit;
}

li div h3 {
  font-size: inherit;
  font-weight: 100;
}

li img {
  width: 30%;
  height: 100%;
}

form {
  display: flex;
  align-items: center;
  font-size: 1rem;
  flex: none;
  position: absolute;
  width: 100%;
  bottom: 0;
  background-color: white;
  height: 70px;
  padding: 0.5rem;
}

form input {
  -webkit-appearance: none;
  appearance: none;
  flex-grow: 1;
  font-size: inherit;
  border: 1px solid #efefef;
  border-radius: 4px;
  padding: 0.5em;
  margin-right: 0.5rem;
}

form input:focus,
form input:active {
  border: 1px solid #e52d27;
}

form button {
  -webkit-appearance: none;
  appearance: none;
  background-color: #e52d27;
  border-radius: 100%;
  border: 0;
  cursor: pointer;
  transition: 250ms;
  flex-shrink: 0;
  flex-grow: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 36px;
  height: 36px;
}

form button svg {
  width: 36px;
}

form button:hover,
form button:focus {
  background-color: #bf1510;
}

label {
  font-size: 0;
}

/* Indicator styling */

[data-tooltip="online"] {
  color: green;
}

[data-tooltip="offline"] {
  color: red;
}

/* Chat bubble styling */
[data-user="user"]::after {
  content: "✓";
  font-size: 0.5em;
  margin-left: 1em;
}

.received::after {
  content: "✓✓";
  color: #5ec5e8;
}

#loader {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 2em;
  width: 5em;
  background-color: #ececec;
  border-radius: 6px;
  order: 15;
  flex-shrink: 0;
}

#loader.hide {
  display: none;
}

.dot {
  height: 0.5em;
  width: 0.5em;
  background-color: #aaa;
  opacity: 0.3;
  border-radius: 50%;
  position: relative;
  margin-right: 0.1em;
  animation: dots 1.5s ease-in-out infinite;
}

.center {
  animation-delay: 0.3s;
}

.right {
  animation-delay: 0.3s;
}

@-webkit-keyframes dots {
  0% {
    opacity: 1;
  }
}

@keyframes dots {
  0% {
    opacity: 1;
  }
}

.icon {
  border: 2px red solid;
  border-radius: 100%;
  height: 2rem;
  margin-right: 1em;
}

.logo {
  display: flex;
  align-items: center;
}

/* Tooltip styling */
span {
  position: relative;
  font-size: 1.3em;
}

span:hover::before {
  opacity: 1;
  padding: 0 0.5em;
}

span:hover::after,
span:hover::before {
  opacity: 1;
  font-size: 0.8em;
}

span::before {
  opacity: 0;
  padding: 0 0.5em;
  transition: all 250ms ease-in;
  content: attr(data-tooltip);
  position: absolute;
  bottom: -1.4em;
  border-radius: 2px;
  color: white;
  background-color: rgba(29, 181, 70, 1);
  left: -9999px;
  right: -9999px;
  margin: auto;
  width: max-content;
  max-width: 10em;
}

span::after {
  opacity: 0;
  transition: all 250ms ease-in;
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent rgba(29, 181, 70, 1)  transparent;
}

[data-tooltip="offline"]::before {
  background-color: rgba(255, 0, 0, 1);
}

[data-tooltip="offline"]::after {
  border-color: transparent transparent rgba(255, 0, 0, 1) transparent;
}

/* Face animation */
#eye_right {
  transform: scaleY(1);
  transition: transform 100ms ease-in-out;
  transform-origin: center center;
}

svg:hover #eye_right {
  transform: scaleY(0.5);
}

